# vulkano_experiment

./: Cargo.toml  README.md  run.bat
gfx_lib/: Cargo.toml
gfx_lib/src/: lib.rs
gfx_lib/src/graphics/: mod.rs  object.rs
gfx_lib/src/graphics/image/: loader.rs  sampler_pool.rs
gfx_lib/src/graphics/image/atlas/: mod.rs  rect_solver.rs
gfx_lib/src/graphics/renderer_2d/: mod.rs
gfx_lib/src/graphics/renderer_3d/: geometry_pass.rs  mesh.rs  mod.rs
gfx_lib/src/graphics/renderer_3d/lighting_system/: shadow_mapper.rs
gfx_lib/src/graphics/renderer_3d/mesh/: immutable_mesh_data.rs  mod.rs  mutable_mesh_data.rs
gfx_lib/src/graphics/renderer_3d/post_processing/: mod.rs
gfx_lib/src/loader/: mod.rs  obj.rs
gfx_lib/src/main_processor/: mod.rs
gfx_lib/src/sync/: loader.rs  mod.rs
gfx_lib/src/view/: mod.rs
serializer/: Cargo.toml
serializer/src/: lib.rs
src/: game_entry.rs  main.rs  scene.rs
src/data/: BUILD-SPIRV.bat  blender_node.py  quad.frag  quad.frag.spv  quad.vert  quad.vert.spv  test.blend  test.blend1  test.mtl
src/game_entry/: mod.rs  ui_2d_pass.rs
src/graphics/: light.rs  mod.rs  object.rs  old_renderer.rs  renderer.rs
src/graphics/image/: loader.rs  mod.rs  sampler_pool.rs
src/graphics/renderer/: geometry_pass.rs  mod.rs
src/graphics/renderer/lighting_system/: lighting_pass.rs  mod.rs  shadeless.rs  shadow_cone_light.rs  shadow_mapper.rs
src/graphics/renderer/shadow_mapping/: mod.rs
src/graphics/renderer_2d/: cache.rs  mod.rs
src/graphics/renderer_3d/: geometry_pass.rs  mesh.rs  mod.rs
src/loader/: blender.rs  mod.rs
src/main_processor/: mod.rs  settings.rs
src/utils/: mod.rs
(+11 files in other folders)
