[package]
name = "my_gfx"
version = "0.1.0"
authors = ["AlekseiMurzanev <alex_murz@icloud.com>"]
edition = "2018"
publish = false

[dependencies]
cgmath = "0.16.1"
cgmath-culling = "0.2.0"
png = "0.15.0"
time = "0.1.38"
rayon = "1.2.1"

# Loaders
blend = "0.6.1"
tobj = "0.1.11"

vulkano = "0.16.0"
vulkano-shaders = "0.16.0"
winit = "*"
vulkano-win = "0.16.0"

# Custom Libs
serializer = { path = "serializer" }
