[package]
name = "my_gfx"
version = "0.1.0"
authors = ["AlekseiMurzanev <alex_murz@icloud.com>"]
edition = "2018"
publish = false

[dependencies]

winit = "*"
vulkano = "0.16.0"
rayon = "1.3.0"
cgmath = "0.16.1"
time = "0.1.38"

# Custom Libs
serializer = { path = "serializer" }
gfx_lib = { path = "gfx_lib" }