[package]
name = "gfx_lib"
version = "0.1.0"
authors = ["AlekseiMurzanev <alex_murz@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cgmath = "0.16.1"
cgmath-culling = "0.2.0"
png = "0.15.0"
rayon = "1.3.0"
time = "0.1.38"

# Loaders
tobj = "0.1.11"

vulkano = "0.16.0"
vulkano-shaders = "0.16.0"
vulkano-win = "0.16.0"
winit = "*"
