[package]
name = "serializer"
version = "0.1.0"
authors = ["AlekseiMurzanev <alex_murz@icloud.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]


[dependencies]
serde = { version = "1.0.103", features = ["derive"] }
serde_json = "1.0.44"